--- a/index.html
+++ b/index.html
@@ -269,6 +269,10 @@
         </section>
 
         <section>
+          <img src="img/trust-oecd.png" alt="">
+        </section>
+
+        <section>
           <p>In theory, FOI can help. However…</p>
         </section>
 
