--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 				<section>
 					<h2>About me</h2>
 					<img style="width: auto; height: 35vh; margin-top: 10px;" src="img/tom.jpg" />
-					<p>Tom Cardoso, investigative reporter<br />at The Globe and Mail</p>
-					<p><a href="https://www.twitter.com/tom_cardoso">@tom_cardoso</a></p>
+					<p>Tom Cardoso, investigative reporter<br />at The Globe and Mail (and FOI power user)</p>
+					<p><a href="mailto:tcardoso@globeandmail.com">tcardoso@globeandmail.com</a></p>
 				</section>
 
         <section>
